@startuml
hide circle

entity User {
    * id
    **email**
    password
    firstname
    lastname
    birth_date [0..1]
    phone_number [0..1]
    city
    postal_code
    street
    house_number
}

entity Category {
    * id
    label
    description
    promotion [0..1]
}

entity Product  {
    * id
    price
    category
    description
}

entity Order {
    *id
    date
    user
}

entity OrderProduct {
    *id
    quantity
    accorded_price
    order
    product
}

entity Language {
    *id
    internationalCode
}

entity Translation {
    *language
    *product
    label
}

entity Promotion {
    *id
    start_date
    end_date
    percentage
}

Order::user --> User::id
Order::id <-left- OrderProduct::order
Product::category -left-> Category::id
OrderProduct::product --> Product::id
Category::promotion -left-> Promotion::id

Translation::language -right-> Language::id
Translation::product -right-> Product::id
@enduml